--- a/templateproject/Baksteen.Templates.WPF.Blazor.csproj
+++ b/templateproject/Baksteen.Templates.WPF.Blazor.csproj
@@ -5,12 +5,12 @@
     <PackageVersion>0.1.0.0</PackageVersion>
     <PackageId>Baksteen.Templates.WPF.Blazor</PackageId>
     <Title>Baksteen WPF Blazor Template</Title>
-    <Description>Templates for creating Avalonia applications and libraries.</Description>
+    <Description>Template for creating a hybrid WPF and Blazor desktop app.</Description>
 	<PackageTags>Blazor;WPF;UI</PackageTags>
     <PackageProjectUrl>http://github.com/jpmikkers</PackageProjectUrl>
     <RepositoryUrl>https://github.com/jpmikkers/Templates</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <IncludeContentInPack>true</IncludeContentInPack>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <ContentTargetFolders>content</ContentTargetFolders>
